BE: Implement method to get all reviews and to delete review.

--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -211,3 +211,8 @@ textarea.form-control {
 .table td, .table th {
     vertical-align: middle;
 }
+
+.dropdown-menu.show {
+    display: block;
+    left: 40px;
+}
