--- a/src/main/resources/static/css/personalCab.css
+++ b/src/main/resources/static/css/personalCab.css
@@ -29,6 +29,7 @@
 
 .assignedBooksHeader {
     text-align: center;
+    margin-left:10%;
 }
 
 #books-table {
@@ -269,6 +270,8 @@
 .input-group > .custom-select:not(:first-child), .input-group > .form-control:not(:first-child) {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    height: 100%;
+    left: auto;
 }
 
 .input-group > .input-group-append:last-child > .btn:not(:last-child):not(.dropdown-toggle),
@@ -496,4 +499,8 @@ img#error-image, img#success-image {
 
 .clearfix {
     margin-left: 10%;
+}
+
+.dropdown-menu.show {
+    left: 40px;
 }
