Add busy and free icon for books and assign and get in line buttons

--- a/src/main/resources/static/css/allBooks.css
+++ b/src/main/resources/static/css/allBooks.css
@@ -12,3 +12,9 @@
 .col-8 {
     align-content: center;
 }
+.img-for-status {
+    /* float: left; */
+    position: absolute;
+    clear: both;
+    transform: translateX(-45px);
+}
