--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -45,6 +45,7 @@
                             <tr id="book-status"></tr>
                             <tr id="book-added-by"></tr>
                             <tr id="book-added-at"></tr>
+                            <tr id = "assignButton"></tr>
                         </table>
                     </div>
                 </div>
